# issue_tracker_bot

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml  pytest.ini  requirements.txt
issue_tracker_bot/: bot_controller.py  controller.py  main.py  main_fastapi.py  serve  set_telegram_webhook.py  settings.py
issue_tracker_bot/repository/: commons.py  database.py  models_db.py  models_pyd.py  operations.py
issue_tracker_bot/services/: __init__.py  actions.py  commands.py  context.py  data_export.py  export_data.py  message_processing.py  message_to_page_mapping.py  models.py  sync_context_helpers.py
issue_tracker_bot/services/gcloud/: auth.py  service.py
issue_tracker_bot/services/repository/: database.py  models_db.py  models_pyd.py  operations.py
issue_tracker_bot/services/telegram/: app_context_helpers.py  bot_app_initializer.py  bot_service.py  helpers.py  service.py
scripts/: set_telegram_commands.py  set_telegram_webhook.py
tests/: test_env.py
tests/test_repository/: common.py  factories.py  test_devices.py  test_devices_creation.py  test_devices_getters.py  test_messages.py  test_records.py  test_users.py
